--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -141,7 +141,8 @@
         <input type="checkbox" id="showPass" />
         <label for="showPass">Show Password</label>
       </div>
-      <a href="/html/home.html"><button type="submit" class="login-btn">Log In</button></a>
+
+      <button type="submit" class="login-btn">Log In</button>
     </form>
 
     <!-- Google Sign-In button -->
@@ -184,7 +185,7 @@
       try {
         const userCredential = await auth.signInWithEmailAndPassword(email, password);
         alert(`Welcome back, ${userCredential.user.displayName || email}!`);
-        window.location.href = "/html/home.html"; // Change to your dashboard/home page
+        window.location.href = "/html/home.html"; // Redirect on success
       } catch (error) {
         alert(`Login failed: ${error.message}`);
       }
@@ -199,7 +200,7 @@
         .then((userCredential) => {
           const user = userCredential.user;
           alert(`Welcome back, ${user.displayName || user.email}!`);
-          window.location.href = "/html/home.html"; // Change as needed
+          window.location.href = "/html/home.html"; // Redirect on success
         })
         .catch(error => {
           alert(`Google sign-in failed: ${error.message}`);
