--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -185,7 +185,7 @@
       try {
         const userCredential = await auth.signInWithEmailAndPassword(email, password);
         alert(`Welcome back, ${userCredential.user.displayName || email}!`);
-        window.location.href = "home.html";
+        window.location.href = "../html/home.html";
       } catch (error) {
         alert(`Login failed: ${error.message}`);
       }
@@ -200,7 +200,7 @@
         .then((userCredential) => {
           const user = userCredential.user;
           alert(`Welcome back, ${user.displayName || user.email}!`);
-          window.location.href = "home.html";
+          window.location.href = "../html/home.html";
  // Redirect on success
         })
         .catch(error => {
