Fixed up some syntax with Recent plan

--- a/html/home.html
+++ b/html/home.html
@@ -91,18 +91,19 @@
 <div class="recentPlan">
   <p id="Recent">Recent Plan</p>
 
-  <div class="dayy">
-    <img class="recent-img" src="../assets/Item.png" alt="Plan 1">
-    <img class="recent-img" src="../assets/Item.png" alt="Plan 2">
-    <img class="recent-img" src="../assets/Item.png" alt="Plan 3">
-    <img class="recent-img" src="../assets/Item.png" alt="Plan 4">
-  </div>
-
-  <div class="time">
-    <p class="recent-date">---</p>
-    <p class="recent-date">---</p>
-    <p class="recent-date">---</p>
-    <p class="recent-date">---</p>
+  <div class="holderR">
+    <div class="plan-images">
+      <img id="holderR" class="recent-img" src="../assets/Item.png" alt="Plan 1">
+      <img id="holderR" class="recent-img" src="../assets/Item.png" alt="Plan 2">
+      <img id="holderR" class="recent-img" src="../assets/Item.png" alt="Plan 3">
+      <img id="holderR" class="recent-img" src="../assets/Item.png" alt="Plan 4">
+    </div>
+    <div class="plan-dates">
+      <p id="holderR" class="recent-date"></p>
+      <p id="holderR" class="recent-date"></p>
+      <p id="holderR" class="recent-date"></p>
+      <p id="holderR" class="recent-date"></p>
+    </div>
   </div>
 
   <div class="wasd" id="viewall">
