--- a/html/video.html
+++ b/html/video.html
@@ -9,7 +9,7 @@
 </head>
 <body class="background">
    		<div class="Container">
-            	<a href="./Workout1.html">
+            	<a href="./Exircise.html">
                     <img src="../assets/Arrow.png" alt="Arrow" />
                 </a> 
 		</div>
