bug has been fixed officially

--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -222,6 +222,6 @@
 
     };
   </script>
-
+<div style="flex-wrap: wrap; margin-top: 600px;"><p>for now use this</p><a href="/html/home.html"><button>Click here!</button></a></div>
 </body>
 </html>
