--- a/html/home.html
+++ b/html/home.html
@@ -50,7 +50,7 @@
       document.getElementById("welcome-message").textContent = `Hi, ${username}!`;
     } else {
       // If no username found, go back to login
-      window.location.href = "login.html";
+      window.location.href = "home.html";
     }
   </script>
 
