--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -656,7 +656,7 @@ function handleLogout() {
       document.getElementById("account-username").textContent = username;
     } else {
   
-      window.location.href = "login.html";
+      window.location.href = "home.html";
     }
     window.onload = () => {
       const username = localStorage.getItem("loggedInUser") || "Guest";
