--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -48,7 +48,8 @@
     }
 
     input[type="email"],
-    input[type="password"] {
+    input[type="password"],
+    input[type="text"] {
       width: 100%;
       padding: 12px;
       font-size: 15px;
@@ -108,7 +109,6 @@
       text-decoration: underline;
     }
 
-    /* Google Sign-In container spacing */
     #google-signin {
       margin-top: 10px;
       display: flex;
@@ -128,6 +128,10 @@
   <div class="login-container">
     <h2>Login to Your Account</h2>
     <form id="login-form">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" autocomplete="username" required />
+      </div>
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" id="email" autocomplete="email" required />
@@ -154,7 +158,7 @@
   </div>
 
   <script>
-    // Your Firebase config (replace with your own if needed)
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyAKsNqr-UAkwGh2H6uD_ZXfwjwCsinB6bg",
       authDomain: "fitnesspal-3c566.firebaseapp.com",
@@ -165,7 +169,6 @@
       measurementId: "G-DE14S51W80"
     };
 
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
@@ -179,19 +182,20 @@
     document.getElementById('login-form').addEventListener('submit', async (e) => {
       e.preventDefault();
 
+      const username = document.getElementById('username').value.trim(); // grabbed but not used yet
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value;
 
       try {
         const userCredential = await auth.signInWithEmailAndPassword(email, password);
-        alert(`Welcome back, ${userCredential.user.displayName || email}!`);
+        alert(`Welcome back, ${userCredential.user.displayName || username || email}!`);
         window.location.href = "../html/home.html";
       } catch (error) {
         alert(`Login failed: ${error.message}`);
       }
     });
 
-    // Google Sign-In callback for Google Identity Services
+    // Google Sign-In callback
     function handleCredentialResponse(response) {
       const id_token = response.credential;
       const credential = firebase.auth.GoogleAuthProvider.credential(id_token);
@@ -201,7 +205,6 @@
           const user = userCredential.user;
           alert(`Welcome back, ${user.displayName || user.email}!`);
           window.location.href = "../html/home.html";
- // Redirect on success
         })
         .catch(error => {
           alert(`Google sign-in failed: ${error.message}`);
@@ -212,16 +215,14 @@
       google.accounts.id.initialize({
         client_id: '899373532299-dno9k1v6u83mn2ngmkh0dsgoc64g7vpg.apps.googleusercontent.com',
         callback: handleCredentialResponse,
-        ux_mode: 'popup' 
+        ux_mode: 'popup'
       });
 
       google.accounts.id.renderButton(
         document.getElementById('google-signin'),
         { theme: "outline", size: "large" }
       );
-
     };
   </script>
-<div style="flex-wrap: wrap; margin-top: 600px;"><p>for now use this</p><a href="/html/home.html"><button>Click here!</button></a></div>
 </body>
 </html>
