--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -4,437 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/setting.css">
   <title>FitnessPal</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap');
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 23px 33px;
-      background-color: black;
-    }
-
-    .container {
-      gap: 10px;
-    }
-
-    .header {
-      background: #F15225;
-      height: 209px;
-      width: 100%;
-    }
-
-    .header-image {
-      margin-top: 51px;
-      margin-left: 32px;
-    }
-
-    .setting {
-      font-weight: bold;
-      font-size: 16px;
-      margin-top: 30px;
-      margin-left: 33px;
-    }
-
-    .para-title {
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    .pfp-image {
-      width: 20px !important;
-      height: 20px !important;
-    }
-
-    .name-text {
-      font-family: "Sen", sans-serif;
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    .edit-pin {
-      font-family: "Sen", sans-serif;
-      font-weight: bold;
-      font-size: 10px;
-      color: #9C9C9C;
-      margin-top: 3px;
-    }
-
-    .edit-pin:hover {
-      color: #F15225;
-    }
-
-    .btn-containers {
-      display: flex;
-      place-items: center;
-    }
-
-    .dropdown-box {
-      border-radius: 6px;
-      width: 100%;
-      max-width: 400px;
-      background-color: transparent;
-      margin-bottom: 30px;
-    }
-
-    .dropdown-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      cursor: pointer;
-      padding: 28px 33px 12px;
-    }
-
-    .dropdown-title {
-      display: flex;
-      align-items: center;
-      gap: 22px;
-    }
-
-    .dropdown-title img {
-      width: 18px;
-      height: 18px;
-    }
-
-    .arrow-icon {
-      width: 24px;
-      height: 24px;
-      margin-left: 240px;
-      transition: transform 0.3s ease;
-    }
-
-    .dropdown-box.open .arrow-icon {
-      transform: rotate(-90deg);
-    }
-
-    .dropdown-content {
-      display: none;
-      flex-direction: column;
-      gap: 15px;
-      padding: 10px 33px 16px;
-      animation: slideDown 0.3s ease forwards;
-    }
-
-    .dropdown-box.open .dropdown-content {
-      display: flex;
-    }
-
-    .dropdown-item {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .dropdown-item1 {
-      align-items: center;
-      gap: 10px;
-    }
-
-    .dropdown-item img {
-      width: 50px;
-      height: 50px;
-      border-radius: 100%;
-    }
-
-    .switch {
-      position: relative;
-      display: inline-block;
-      width: 60px;
-      height: 34px;
-    }
-
-    .switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      transition: .4s;
-      border-radius: 34px;
-    }
-
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 26px;
-      width: 26px;
-      left: 4px;
-      bottom: 4px;
-      background-color: white;
-      transition: .4s;
-      border-radius: 50%;
-    }
-
-    input:checked + .slider {
-      background-color: #F15225;
-    }
-
-    input:checked + .slider:before {
-      transform: translateX(26px);
-    }
-
-    @keyframes slideDown {
-      from {
-        opacity: 0;
-        transform: scaleY(0);
-      }
-      to {
-        opacity: 1;
-        transform: scaleY(1);
-      }
-    }
-    /* iPhone 13 Mini and older small iPhones */
-@media (width: 375px) {
- body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 23px 33px;
-      background-color: black;
-    }
-
-    .container {
-      gap: 10px;
-    }
-
-    .header {
-      background: #F15225;
-      height: 209px;
-      width: 100%;
-      max-width: 375px;
-    }
-.arrow-icon {
-      width: 24px;
-      height: 24px;
-      margin-left: 50px !important;
-      transition: transform 0.3s ease;
-    }
-    .dropdown-content {
-      padding-left: 33px !important;
-    }
-}
-
-/* iPhone 12 / 13 / 14 / 15 / 16 (Regular & Pro) */
-@media (width: 390px) {
- body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 23px 33px;
-      background-color: black;
-    }
-
-    .container {
-      gap: 10px;
-    }
-
-    .header {
-      background: #F15225;
-      height: 209px;
-      width: 100%;
-      max-width: 390px;
-    }
-.arrow-icon {
-      width: 24px;
-      height: 24px;
-      margin-left: 50px !important;
-      transition: transform 0.3s ease;
-    }
-    .dropdown-content {
-      padding-left: 33px !important;
-    }
-}
-
-/* iPhone 14 Pro / iPhone 15 Pro / iPhone 16 Pro */
-@media (width: 393px) {
-  body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 23px 33px;
-      background-color: black;
-    }
-
-    .container {
-      gap: 10px;
-    }
-
-    .header {
-      background: #F15225;
-      height: 209px;
-      width: 100%;
-      max-width: 390px;
-    }
-.arrow-icon {
-      width: 24px;
-      height: 24px;
-      margin-left: 50px !important;
-      transition: transform 0.3s ease;
-    }
-    .dropdown-content {
-      padding-left: 33px !important;
-    }
-}
-
-/* iPhone 12/13 Pro Max */
-@media (width: 428px) {
-  body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 23px 33px;
-      background-color: black;
-    }
-
-    .container {
-      gap: 10px;
-    }
-
-    .header {
-      background: #F15225;
-      height: 209px;
-      width: 100%;
-      max-width: 428px;
-    }
-.arrow-icon {
-      width: 24px;
-      height: 24px;
-      margin-left: 50px !important;
-      transition: transform 0.3s ease;
-    }
-    .dropdown-content {
-      padding-left: 66px !important;
-    }
-    .dropdown-header {
-      padding-left: 33px;
-    }
-}
-
-/* iPhone 14/15/16 Pro Max */
-@media (width: 430px) {
- body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 23px 33px;
-      background-color: black;
-    }
-
-    .container {
-      gap: 10px;
-    }
-
-    .header {
-      background: #F15225;
-      height: 209px;
-      width: 100%;
-      max-width: 430px;
-    }
-.arrow-icon {
-      width: 24px;
-      height: 24px;
-      margin-left: 50px !important;
-      transition: transform 0.3s ease;
-    }
-    .dropdown-content {
-      padding-left: 66px !important;
-    }
-    .dropdown-header {
-      padding-left: 33px;
-    }
-}
-@media screen and (min-width: 1200px) {
-  
-}
-
-    .logout-btn {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #F15225;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  font-size: 14px;
-  font-family: "Sen", sans-serif;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.logout-btn:hover {
-  background-color: #d4471f;
-}
-
-.btn-containers {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 15px 0;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 46px;
-  height: 24px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  top: 0; left: 0;
-  right: 0; bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-  border-radius: 24px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 18px;
-  width: 18px;
-  left: 3px;
-  bottom: 3px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #F15225;
-}
-
-input:checked + .slider:before {
-  transform: translateX(22px);
-}
-
-  </style>
 </head>
 <body>
   <!-- HEADER -->
