--- a/html/edit-profile.html
+++ b/html/edit-profile.html
@@ -4,151 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/form.css">
   <title>FitnessPal</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap');
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 0px 33px;
-      background-color: black;
-    }
-
-    .container {
-      gap: 10px;
-    }
-
-    .header {
-      background: #F15225;
-      height: 209px;
-      width: 100%;
-    }
-
-    .header-image {
-      margin-top: 51px;
-      margin-left: 32px;
-    }
-
-    .setting {
-      font-weight: bold;
-      font-size: 16px;
-      margin-top: 30px;
-      margin-left: 33px;
-    }
-
-    .user-profile {
-      text-align: center;
-      margin-top: 35px;
-    }
-
-    .user-profile img {
-      width: 120px !important;
-      height: 120px !important;
-      border-radius: 100%;
-      border: 3px solid #FFF;
-      filter: drop-shadow(8px 8px 10px gray);
-      object-fit: cover;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-    .user-profile img:hover {
-      transform: scale(1.05);
-      filter: drop-shadow(10px 10px 15px #F15225);
-    }
-
-    .info-container {
-      margin: 20px 33px;
-    }
-
-    .info-container p {
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .info-text {
-      width: 100%;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-
-    .burher {
-      font-family: "Sen", sans-serif;
-      font-weight: bold;
-      font-size: 16px;
-      background-color: #FFF;
-      border: 3px solid #F15225;
-      border-radius: 100px;
-      color: #F15225;
-      padding: 13px 30px;
-      margin: 20px 20px 40px 33px;
-      cursor: pointer;
-    }
-
-    .burher1 {
-      font-family: "Sen", sans-serif;
-      font-weight: bold;
-      font-size: 16px;
-      background-color: #F15225;
-      border: 6px solid #F15225;
-      border-radius: 100px;
-      color: #FFF;
-      padding: 10px 30px;
-      cursor: pointer;
-    }
-    .btn-saved {
-      text-align: center;
-    }
-    @media (width: 375px) {
- body {
-      font-family: "Sen", sans-serif;
-    }
-
-    hr {
-      margin: 23px 33px;
-      background-color: black;
-    }
- .btn-saved {
-     margin-right: 25px;
-    }
-   
-}
-
-/* iPhone 12 / 13 / 14 / 15 / 16 (Regular & Pro) */
-@media (width: 390px) {
-  .btn-saved {
-     margin-right: 25px;
-    }
-}
-
-/* iPhone 14 Pro / iPhone 15 Pro / iPhone 16 Pro */
-@media (width: 393px) {
- .btn-saved {
-     margin-right: 25px;
-    }
-}
-
-/* iPhone 12/13 Pro Max */
-@media (width: 428px) {
- 
-}
-
-/* iPhone 14/15/16 Pro Max */
-@media (width: 430px) {
-
-}
-  </style>
 </head>
 <body>
   <!-- HEADER -->
