--- a/html/workout.html
+++ b/html/workout.html
@@ -15,7 +15,8 @@
 
 	<body class="background">
 		<div class="Container">
-			<img src="../assets/Arrow.png" alt="Arrow" />
+			<a href="./home.html"><img src="../assets/Arrow.png" alt="Arrow" /></a>
+
 			<div class="Font">WorkOuts</div>
 		</div>
 
