--- a/html/Exircise.html
+++ b/html/Exircise.html
@@ -32,5 +32,41 @@
 				<a href="./video.html" class="Button">Knee plank 00.30</a>
 			</div>
 		</div>
+		<div class="Container3">
+			<img
+				src="../assets/Screen Shot 2025-07-30 at 11.51.59 AM 1.png"
+				class="img"
+			/>
+			<div class="Exercise1">
+				<a href="./video.html" class="Button">Forearm Plank 00.30</a>
+			</div>
+		</div>
+		<div class="Container3">
+			<img
+				src="../assets/Screen Shot 2025-07-30 at 12.09.55 PM.png"
+				class="img"
+			/>
+			<div class="Exercise1">
+				<a href="./video.html" class="Button">Side Plank 00.30</a>
+			</div>
+		</div>
+		<div class="Container3">
+			<img
+				src="../assets/Screen Shot 2025-07-30 at 3.10.01 PM.png"
+				class="img"
+			/>
+			<div class="Exercise1">
+				<a href="./video.html" class="Button">Push-Up 00.30</a>
+			</div>
+		</div>
+		<div class="Container3">
+			<img
+				src="../assets/Screen Shot 2025-07-30 at 3.08.44 PM.png"
+				class="img"
+			/>
+			<div class="Exercise1">
+				<a href="./video.html" class="Button">Crunches 00.30</a>
+			</div>
+		</div>
 	</body>
 </html>
