--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/setting.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/setting.css">
+  <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
   <title>FitnessPal</title>
 </head>
 <body>
@@ -171,11 +171,6 @@
     </p>
   </div>
 </div>
-
-
-  </section>
-
+<script src="/js/setting.js"></script>
 </body>
 </html>
-
-  
