--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -13,19 +13,17 @@
     <h2>Login to Your Account</h2>
     <form id="login-form">
       <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" autocomplete="email" required />
+        <label for="email">Username</label>
+        <input type="text" id="username" required />
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" autocomplete="current-password" required />
-      </div>
-
+        <input type="password" id="password" required />
+      </div><br>
       <div class="show-password">
         <input type="checkbox" id="showPass" />
         <label for="showPass">Show Password</label>
       </div>
-
       <button type="submit" class="login-btn">Log In</button>
     </form>
 
