--- a/html/Exircise.html
+++ b/html/Exircise.html
@@ -32,13 +32,14 @@
 				<a href="./video.html" class="Button">Knee plank 00.30</a>
 			</div>
 		</div>
+
 		<div class="Container3">
 			<img
 				src="../assets/Screen Shot 2025-07-30 at 11.51.59 AM 1.png"
 				class="img"
 			/>
 			<div class="Exercise1">
-				<a href="./video.html" class="Button">Forearm Plank 00.30</a>
+				<a href="./Forearm.html" class="Button">Forearm Plank 00.30</a>
 			</div>
 		</div>
 		<div class="Container3">
