--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
     button:hover {
       background-color: #f5f5f5;
-       transform: translateY(-2px);
+       transform: translateY(-90px)
+       translateX(-90px)
     }
 
   </style>
