--- a/html/Crunches.html
+++ b/html/Crunches.html
@@ -66,16 +66,17 @@
 		</div>
 
 		<img
-			src="../assets/Screen Shot 2025-07-30 at 11.51.59 AM 1.png"
+			src="../assets/Screen Shot 2025-07-30 at 3.08.44 PM.png"
 			alt="image"
 			class="Posetion"
 		/>
 		<div class="text">INSTRUCTION</div>
 		<div class="text2">
 			<div class="text3">
-				Perform the forearm plank position with your elbows under your
-				shoulders, forearms flat on the ground, and lift one leg at a time while
-				keeping your core tight.
+				Lie on your back with your knees bent and feet flat on the floor, hands
+				lightly touching the sides of your head. Lift your shoulders and upper
+				back off the ground by engaging your core, then slowly lower back down
+				while keeping your lower back pressed to the floor.
 			</div>
 		</div>
 		<div>
@@ -87,7 +88,7 @@
 				width="315"
 				height="150"
 				style="margin-left: 20px"
-				src="https://www.youtube.com/embed/A2b2EmIg0dA?si=OmzOnN4W3inv2SdG"
+				src="https://www.youtube.com/embed/MKmrqcoCZ-M?si=rNCmhUG-fQSYh5rT"
 				title="YouTube video player"
 				frameborder="0"
 				allowfullscreen
