--- a/html/Exircise.html
+++ b/html/Exircise.html
@@ -48,7 +48,7 @@
 				class="img"
 			/>
 			<div class="Exercise1">
-				<a href="./video.html" class="Button">Side Plank 00.30</a>
+				<a href="./Side.html" class="Button">Side Plank 00.30</a>
 			</div>
 		</div>
 		<div class="Container3">
@@ -57,7 +57,7 @@
 				class="img"
 			/>
 			<div class="Exercise1">
-				<a href="./video.html" class="Button">Push-Up 00.30</a>
+				<a href="./PushUp.html" class="Button">Push-Up 00.30</a>
 			</div>
 		</div>
 		<div class="Container3">
@@ -66,7 +66,7 @@
 				class="img"
 			/>
 			<div class="Exercise1">
-				<a href="./video.html" class="Button">Crunches 00.30</a>
+				<a href="./Crunches.html" class="Button">Crunches 00.30</a>
 			</div>
 		</div>
 	</body>
