--- a/html/Side.html
+++ b/html/Side.html
@@ -66,16 +66,17 @@
 		</div>
 
 		<img
-			src="../assets/Screen Shot 2025-07-30 at 11.51.59 AM 1.png"
+			src="../assets/Screen Shot 2025-07-30 at 12.09.55 PM.png"
 			alt="image"
 			class="Posetion"
 		/>
 		<div class="text">INSTRUCTION</div>
 		<div class="text2">
 			<div class="text3">
-				Perform the forearm plank position with your elbows under your
-				shoulders, forearms flat on the ground, and lift one leg at a time while
-				keeping your core tight.
+				Lie on your side with your elbow directly under your shoulder and your
+				legs stacked. Lift your hips off the ground, keeping your body in a
+				straight line from head to feet, and hold the position while engaging
+				your core.
 			</div>
 		</div>
 		<div>
@@ -87,7 +88,7 @@
 				width="315"
 				height="150"
 				style="margin-left: 20px"
-				src="https://www.youtube.com/embed/A2b2EmIg0dA?si=OmzOnN4W3inv2SdG"
+				src="https://www.youtube.com/embed/NXr4Fw8q60o?si=1Q83qcBTYp_O1U-5"
 				title="YouTube video player"
 				frameborder="0"
 				allowfullscreen
