fixed home screen bug

--- a/html/home.html
+++ b/html/home.html
@@ -43,7 +43,7 @@
       <script src="../js/timer.js"></script>
 
 <!-- home.html -->
-<div class="username">Hi, <span id="welcome-message"></span>!</div>
+<div class="username"><span id="welcome-message"></span></div>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const username = localStorage.getItem("username");
