--- a/Test.html
+++ b/Test.html
@@ -3,16 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="stylesheet" href="Test.css" />
+		<title>Rectangle Timer</title>
+		<link rel="stylesheet" href="./Test.css" />
 	</head>
 	<body>
-		<div class="timer">
-			<span class="time">2:00</span>
-			<svg width="200" height="200" class="svg_timer">
-				<circle class="c1" cx="100" cy="100" r="80" />
-			</svg>
-		</div>
-		<script src="Test.js"></script>
+		<div class="timer" id="timerBox">Start</div>
+		<script src="./Test.js"></script>
 	</body>
 </html>
