--- a/html/video.html
+++ b/html/video.html
@@ -1,36 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-  <title>FitnessPal</title>
-    	<link rel="stylesheet" href="../css/Workout2.css" />
-</head>
-<body class="background">
-   		<div class="Container">
-            	<a href="./Exircise.html">
-                    <img src="../assets/Arrow.png" alt="Arrow" />
-                </a> 
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body class="Background">
+		<a href="./Exircise.html" style="text-decoration: none" ,>
+			<div class="Back"">&lt;</div>
+		</a>
+		<img
+			src="../assets/Knee plank exercise_ Flat vector illustration… 1.png"
+			alt="image"
+			class="Posetion"
+		/>
+		<div class="timer" id="timerBox">Start</div>
+		<div class="Container">
+			<div class="Instruction">INSTRUCTION</div>
+			<div class="Instruction1">
+				Perform the traditional plank position but with your knees on the ground
+				and your feet crossed in the air keep your spine straight, Hold this
+				position
+			</div>
+			<div class="Instruction">HOW TO DO?</div>
+			<div class="Instruction1">HERE’S A VIDEO FOR VISUAL INSTRUCTIONS!</div>
+			<iframe
+				width="315"
+				height="150"
+				src="https://www.youtube.com/embed/Of0YDiN9p00?si=6FyDBblINhO9n7Ia"
+				title="YouTube video player"
+				frameborder="0"
+				allowfullscreen
+			></iframe>
 		</div>
-     	
-		<img src="..//assets/Knee plank exercise_ Flat vector illustration… 1.png" alt="image" class="Posetion" />
-		<div class="text">INSTRUCTION</div>	
-        <div class="text2">
-            <div class="text3">Perform the traditional plank position but with your knees on the ground and your feet crossed in the air</div>
-            <div class="text4">Keep your spine straight, Hold this position</div>
-        </div>
-        <div>
-		
-
-        <div class="text">HOW TO DO IT?</div>
-            <p class="text" style="font-size: 13px; font-weight: 600;">HERES A VIDEO FOR VISUAL INTRUSTIONS!</p>
-            <iframe width="315" height="150" style="margin-left: 20px;"
-            src="https://www.youtube.com/embed/Of0YDiN9p00" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allowfullscreen>
-            </iframe>
-
-</body>
+	</body>
 </html>
+<style>
+	@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@1,300&family=Poppins:wght@500&display=swap");
+	.Background {
+		background-color: #f15223;
+	}
+	.Back {
+		height: 50px;
+		width: 50px;
+		border-radius: 50%;
+		border: 2px solid;
+		border-color: rgba(75, 75, 75, 0.3);
+		margin-top: 46px;
+		margin-left: 30px;
+		display: flex; /* enables flexbox */
+		justify-content: center; /* horizontal centering */
+		align-items: center;
+		font-family: sans-serif;
+		font-weight: bold;
+        color: black;
+        font-size: 15px;
+	}
+	.Posetion {
+		width: 55%;
+		height: auto;
+		margin-left: 94px;
+		border-radius: 10px;
+	}
+	.timer {
+		width: 97px;
+		height: 37px;
+		background-color: #9a0fe000;
+		color: white;
+		font-family: "Poppins", sans-serif;
+		font-size: 1em;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+		border-radius: 20px;
+		border: 5px solid;
+		box-shadow: 0 0 5px #ffffff;
+		text-align: center;
+		user-select: none;
+		margin-left: 150px;
+		margin-top: 10px;
+	}
+	.Container {
+		background-color: rgba(255, 255, 255, 0);
+		margin-top: 15px;
+		height: 500px;
+		width: 340px;
+		margin-left: 10vw;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+	}
+	.Instruction {
+		color: rgb(255, 255, 255);
+		font-family: sans-serif;
+		font-weight: 600;
+		font-size: 18px;
+	}
+	.Instruction1 {
+		color: rgb(255, 255, 255);
+		font-family: sans-serif;
+		font-weight: bold;
+		font-size: 16px;
+	}
+</style>
+<script>
+	let totalTime = 60;
+	let currentTime = totalTime;
+	let isRunning = false;
+	let timerInterval;
+
+	const timerBox = document.getElementById("timerBox");
+
+	timerBox.addEventListener("click", () => {
+		if (isRunning) return;
+
+		isRunning = true;
+		startTimer();
+	});
+
+	function startTimer() {
+		updateDisplay();
+		timerInterval = setInterval(() => {
+			currentTime--;
+			updateDisplay();
+
+			if (currentTime <= 0) {
+				clearInterval(timerInterval);
+				isRunning = false;
+				timerBox.textContent = "Done";
+			}
+		}, 1000);
+	}
+
+	function updateDisplay() {
+		const minutes = Math.floor(currentTime / 60);
+		const seconds = currentTime % 60;
+		timerBox.textContent = `${padZero(minutes)}:${padZero(seconds)}`;
+	}
+
+	function padZero(num) {
+		return num.toString().padStart(2, "0");
+	}
+</script>
